Fixed timezone issue

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,5 +47,12 @@ document.write("</li>");
 </script>
 </ul>
 </div>
+
+<div id="info">
+<h3>Information about timeline</h3>
+<p>The times refer to UTC if you didn't set an appropriate time zone. If you did
+set a time zone it will refer to the time it happened on the phone. It does not
+however take daylight saving time into account.</p>
+</div>
 </body>
 </html>
