--- a/templates/css/main.css
+++ b/templates/css/main.css
@@ -8,3 +8,9 @@
 	margin: 3mm 3mm;
 	width:240px;
 }
+
+/* Mostly to keep images from device inside the bubble. */
+img {
+	max-width: 80%;
+	max-height: 80%;
+}
